--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,7 +8,7 @@ branches:
 
 build: off  # будем использовать свой скрипт сборки
 
-#
-#build_script:
-#
-#  - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
+
+build_script:
+
+  - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
